Website/style.css
.header {
  overflow: hidden;
  background-color: #eeeded;
  position: fixed;
  top: 0%;
  left: 0%;
  right: 0%;
  border-bottom: 3px solid rgb(216, 24, 24);
}
.header .links {
  display: flex;
  justify-content: space-between;
  padding: 0% 8% 0% 8%;
  align-items: baseline;
  
}
.header .links a {
  text-align: center;
  text-decoration: none;
  font-size: 16pt;
  font-size: 1.3vw;
  font-family: Andale Mono, monospace;

  position: relative;
  color: black;
  width: 9vw;
  height: 3vw;
}
.header .links a:hover {
  color: rgb(216, 24, 24);
}

#logo {
  position: relative;
  width: 23%;
  align-items: baseline;
  padding-top: 10px;
}

body {
  background-color: #f8f6ee;
  margin-top: 100px;
}

img {
  max-width: 100%; /*Ensure no images overflow screen*/
}

/*All elements with lots of text*/
article {
  position: absolute;
  font-family: Andale Monoe, monospace;
  max-width: 75%;
  font-size: 12px;
  margin-left: auto;
  margin-right: auto;
}

.footer {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  background-color: #eeeded;
  text-align: center;
  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif;
  font-size: 12px;
  border-top: 3px solid rgb(216, 24, 24);
  z-index: 99;
}

/*HOMEPAGE:*/

.image-carousel {
  width: 60%;
  max-width: 40vw;
  position: relative;
  margin-top: 3vw;
  padding-bottom: 3vw;
  margin-left: 5vw;
  z-index: 1;
  float: left;
}
.slides {
  display: none;
}
.prev,
.next {
  cursor: pointer;
  position: absolute;
  top: 11vw;
  width: auto;
  padding: 16px;
  color: rgb(255, 255, 255);
  font-size: 16px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
}
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}
.prev:hover,
.next:hover {
  background-color: rgba(0, 0, 0, 0.8);
}
.number {
  color: #fdfdfd;
  font-size: 14px;
  padding: 8px 12px;
  position: absolute;
  font-family: Andale Mono, monospace;
}

.velkommen {
  width: 40%;
  float: left;
  padding: 50px;
}
.velkommen h1 {
  font-family: Andale Mono, monospace;
  color: rgb(122, 3, 3);
}
.velkommen p {
  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif;
}
.velkommen p1 {
  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif;
  color: rgb(223, 45, 45);
}


/*IMAGES:*/
.row {
  display: flex;
  flex-wrap: wrap;
  padding: 0 8px;
}

.column {
  flex: 20%;
  max-width: 25%;
  padding: 0 5px;
}

.column img {
  margin-top: 10px;
  vertical-align: middle;
  width: 100%; 
}

/*ABOUT*/
#facade {
  float: right;
  max-width: 300px;
  margin-left: 3%;
}

